Fixes css issue on safari

--- a/stories/ReactAccordion/ReactAccordion.module.css
+++ b/stories/ReactAccordion/ReactAccordion.module.css
@@ -21,7 +21,6 @@ h3 {
   font-size: 1.2rem;
   font-weight: 600;
   margin-bottom: 0;
-  user-select: none;
   width: 100%;
   border:none;
   border-bottom: 1px solid #e0dfe6;
